--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ to this section's matching END comment to see page-specific styles.
 
 @font-face {
   font-family: MonseratMedium;
-  src: url("https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/MontserratAlternates-Medium.ttf?v=1674558511145")
+  src: url("/assests/fonts/MontserratAlternates-Medium.ttf")
     format("truetype");
 }
 
@@ -73,7 +73,7 @@ END Glitch hello-app default styles
 ******************************************************************************/
 
 body {
-  background-image: url("https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/lamppostlong2.png?v=1674421589671");
+  background-image: url("/assets/lamppostlong2.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -87,7 +87,7 @@ body {
   top:0;
   width:100%;
   height:100%;
-   background-image: url("https://cdn.glitch.global/f89b6116-5e9f-4c1c-aa54-29b2611ffc82/lampostlongreal.png?v=1674421618916");
+   background-image: url("/assets/lampostlongreal.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
